ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/TestNFG2__c.object-meta.xml
<CustomObject>
    <label>TestNFG2</label>
    <nameField>
        <displayFormat>TestNFG-{000}</displayFormat>
        <label>TestNFG2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestNFG2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>