ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TestNFG2s</relationshipLabel>
    <relationshipName>TestNFG2s</relationshipName>
    <type>Lookup</type>
</CustomField>