ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Date__c</fullName>
    <label>Donation Date</label>
    <length>12</length>
    <type>Text</type>
</CustomField>