ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>Donation_ID__c</fullName>
    <label>Donation ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>