ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/Donor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Donor_Email_Address__c</fullName>
    <label>Donor Email Address</label>
    <type>Email</type>
</CustomField>