ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>Donor_First_Name__c  &amp; &quot; &quot; &amp; Donor_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>