ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/FollowupNeeded__c.field-meta.xml
<CustomField>
    <fullName>FollowupNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FollowupNeeded</label>
    <type>Checkbox</type>
</CustomField>