ShakeCharity/ShakeSharityApp/force-app/main/default/objects/TestNFG2__c/fields/send_email_2donor__c.field-meta.xml
<CustomField>
    <fullName>send_email_2donor__c</fullName>
    <defaultValue>&quot;mailto:yurt57@mac.com&quot;</defaultValue>
    <label>send_email_2donor</label>
    <type>Email</type>
</CustomField>